--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
               </ul>
             </li>
             <li>
-              <a href="">제품소개</a>
+              <a href="">분양안내</a>
               <ul>
-                <li><a href="">SORTER</a></li>
-                <li><a href="">Vacuum Handling System</a></li>
-                <li><a href="">OGAYA</a></li>
+                <li><a href="">분양안내문문</a></li>
+                <li><a href="">모집공고고</a></li>
+                <li><a href="">프리미엄</a></li>
               </ul>
             </li>
             <li>
-              <a href="">인재채용</a>
+              <a href="">단지안내</a>
               <ul>
-                <li><a href="">인사/복리후생제도</a></li>
-                <li><a href="">채용공고</a></li>
+                <li><a href="">단지설계계</a></li>
+                <li><a href="">단지조경</a></li>
+                <li><a href="">단지배치도</a></li>
               </ul>
             </li>
             <li>
@@ -147,9 +148,9 @@
           <span>scroll</span>
         </div>
       </section>
-      <section class="main_content default">
+      <section class="main_content default bg">
         <div class="title">
-          <h2>BRAND PHILOSOPHY</h2>
+          <h2 class="en_font">BRAND PHILOSOPHY</h2>
           <p>
             라이프스타일 리더<br />
             힐스테이트
@@ -158,7 +159,7 @@
         <div class="inner">
           <ul class="brand_tab_menu">
             <li><button class="on">indoor interior</button></li>
-            <li><button class="on">outdoor interior interior</button></li>
+            <li><button>outdoor interior interior</button></li>
           </ul>
           <div class="brand_tab_content">
             <div class="con on">
@@ -168,9 +169,122 @@
                 </figure>
                 <strong>Lorem ipsum dolor sit.</strong>
               </a>
+              <a href="" class="itm" data-num="2">
+                <figure>
+                  <img src="./images/brand_content02.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
+              <a href="" class="itm" data-num="3">
+                <figure>
+                  <img src="./images/brand_content03.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
+              <a href="" class="itm" data-num="4">
+                <figure>
+                  <img src="./images/brand_content04.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
+            </div>
+            <div class="con">
+              <a href="" class="itm" data-num="1">
+                <figure>
+                  <img src="./images/brand_content021.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
+              <a href="" class="itm" data-num="2">
+                <figure>
+                  <img src="./images/brand_content022.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
+              <a href="" class="itm" data-num="3">
+                <figure>
+                  <img src="./images/brand_content023.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
+              <a href="" class="itm" data-num="4">
+                <figure>
+                  <img src="./images/brand_content024.jpg" alt="" />
+                </figure>
+                <strong>Lorem ipsum dolor sit.</strong>
+              </a>
             </div>
           </div>
         </div>
+      </section>
+      <section class="main_product default">
+        <div class="title">
+          <h2>
+            <strong>미래가치를 창출하는</strong><br />
+            “Future Platform”
+          </h2>
+        </div>
+        <ul class="menu_wrap">
+          <li><a href="">종합 부동산개발 선도기업</a></li>
+          <li><a href="">창의적이고 경쟁력 있는 R&D 조직</a></li>
+          <li><a href="">지속가능경영</a></li>
+        </ul>
+      </section>
+      <section class="main_menu default bg">
+        <div class="title">
+          <h2 class="en_font">PRODUCT</h2>
+          <p class="desc">미래를 이끌어가는 HILLSTATE</p>
+        </div>
+
+        <div class="main_menu_wrap">
+          <div class="main_menu_slide swiper">
+            <div class="swiper-wrapper">
+              <div class="itm swiper-slide">
+                <div class="img_box">
+                  <img src="./images/main_menu01.jpg" alt="" />
+                  <p>영통 내 희소성 높은 마지막 프리미엄</p>
+                </div>
+              </div>
+              <div class="itm swiper-slide">
+                <div class="img_box">
+                  <img src="./images/main_menu02.jpg" alt="" />
+                  <p>편리한 광역 교통망</p>
+                </div>
+              </div>
+              <div class="itm swiper-slide">
+                <div class="img_box">
+                  <img src="./images/main_menu03.jpg" alt="" />
+                  <p>도보통학과 명문학군</p>
+                </div>
+              </div>
+              <div class="itm swiper-slide">
+                <div class="img_box">
+                  <img src="./images/main_menu04.jpg" alt="" />
+                  <p>대형마트,복합체육센터 생활인프라</p>
+                </div>
+              </div>
+              <div class="itm swiper-slide">
+                <div class="img_box">
+                  <img src="./images/main_menu01.jpg" alt="" />
+                  <p>영통 내 희소성 높은 마지막 프리미엄</p>
+                </div>
+              </div>
+              <div class="itm swiper-slide">
+                <div class="img_box">
+                  <img src="./images/main_menu02.jpg" alt="" />
+                  <p>영통 내 희소성 높은 마지막 프리미엄</p>
+                </div>
+              </div>
+            </div>
+            <div class="btn_wrap mt40">
+              <a href="" class="btn_default">자세히보기</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="main_concept default">
+        <h2 class="blind">main concept</h2>
+        <h3 class="en_font"></h3>
       </section>
     </main>
   </body>
