--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>제이시티</title>
+    <title>PRUGIO</title>
     <link rel="stylesheet" href="./lib/css/reset.css" />
     <link rel="stylesheet" href="./lib/css/base.css" />
     <link rel="stylesheet" href="./lib/css/fonts.css" />
@@ -99,7 +99,7 @@
             <div class="swiper-slide itm itm01">
               <div class="txt">
                 <strong>Together On Top</strong>
-                <p>HILLSTATE</p>
+                <p>PRUGIO</p>
               </div>
             </div>
             <div class="swiper-slide itm itm02">
@@ -153,7 +153,7 @@
           <h2 class="en_font">BRAND PHILOSOPHY</h2>
           <p>
             라이프스타일 리더<br />
-            힐스테이트
+            푸르지오오
           </p>
         </div>
         <div class="inner">
@@ -284,8 +284,101 @@
       </section>
       <section class="main_concept default">
         <h2 class="blind">main concept</h2>
-        <h3 class="en_font"></h3>
+        <div class="inner">
+          <a href="" class="itm icon01">
+            <h3 class="en_font">Traffic</h3>
+            <p>생활의 속도가 더 빨라지는 입지</p>
+          </a>
+          <a href="" class="itm icon02">
+            <h3 class="en_font">Education</h3>
+            <p>걱정없는 안심 도보통학권</p>
+          </a>
+          <a href="" class="itm icon03">
+            <h3 class="en_font">Infra</h3>
+            <p>다채로운 생활 인프라</p>
+          </a>
+        </div>
+      </section>
+      <section class="main_promotion default bg">
+        <div class="inner">
+          <div class="desc">
+            <div class="title">
+              <h2>Primeum 7</h2>
+              <p>초역세권과 초역대급<br />브랜드 프리미엄의 만남!</p>
+            </div>
+            <div class="control">
+              <button class="play">
+                <svg
+                  width="24"
+                  height="24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <use href="./lib/images/feather-sprite.svg#play" />
+                </svg>
+              </button>
+              <button class="pause">
+                <svg
+                  width="24"
+                  height="24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <use href="./lib/images/feather-sprite.svg#pause" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="movie">
+            <video src="./images/main_movie01.mp4"></video>
+          </div>
+        </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="inner">
+        <div class="sns">
+          <a href="" target="_blank">
+            <img src="./images/instagram.svg" alt="" />
+          </a>
+          <a href="" target="_blank">
+            <img src="./images/facebook.svg" alt="" />
+          </a>
+          <a href="" target="_blank">
+            <img src="./images/youtube.svg" alt="" />
+          </a>
+        </div>
+        <ul class="customer">
+          <li><a href="">서비스이용약관</a></li>
+          <li><a href="" class="b">개인정보처리방침</a></li>
+          <li><a href="">영상정보처리방침</a></li>
+          <li><a href="">뷰티포인트</a></li>
+          <li><a href="">사이트맵</a></li>
+        </ul>
+
+        <p class="tel">
+          고객상담팀(수신자요금부담) 080-023-5454 (상담시간 월~금 : AM 09:00 ~
+          PM 06:00)
+        </p>
+        <address>&copy; AMOREPACIFIC CORPORATION. All rights reserved.</address>
+
+        <div class="flk">
+          <select id="flk">
+            <option value="">Family Link</option>
+            <option value="http://naver.com">naver</option>
+            <option value="http://daum.net">daum</option>
+          </select>
+        </div>
+      </div>
+    </footer>
+    <button class="to_top">
+      <img src="./images/arrow-up.svg" alt="" />
+    </button>
   </body>
 </html>
