--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
             <div class="swiper-slide itm itm02">
               <div class="txt">
                 <strong>Together On Top</strong>
-                <p>HILLSTATE</p>
+                <p>PRUGIO</p>
               </div>
             </div>
             <div class="swiper-slide itm itm03">
               <div class="txt">
                 <strong>Together On Top</strong>
-                <p>HILLSTATE</p>
+                <p>PRUGIO</p>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@
           <h2 class="en_font">BRAND PHILOSOPHY</h2>
           <p>
             라이프스타일 리더<br />
-            푸르지오오
+            푸르지오
           </p>
         </div>
         <div class="inner">
@@ -233,7 +233,7 @@
       <section class="main_menu default bg">
         <div class="title">
           <h2 class="en_font">PRODUCT</h2>
-          <p class="desc">미래를 이끌어가는 HILLSTATE</p>
+          <p class="desc">미래를 이끌어가는 PRUGIO</p>
         </div>
 
         <div class="main_menu_wrap">
@@ -340,6 +340,26 @@
           </div>
         </div>
       </section>
+      <section class="main_movie default">
+        <div class="title">
+          <h2>Premeum 7</h2>
+          <p>the PRUGIO</p>
+          <div class="control">
+            <button class="play">
+              <img src="./images/play.svg" alt="" />
+            </button>
+            <button class="pause">
+              <img src="./images/pause.svg" alt="" />
+            </button>
+            <button class="fullscreen">
+              <img src="./images/airplay.svg" alt="" />
+            </button>
+          </div>
+        </div>
+        <div id="bgndVideo" class="player" data-property="">
+          <span class="blind">홍보비디오</span>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="inner">
@@ -380,5 +400,17 @@
     <button class="to_top">
       <img src="./images/arrow-up.svg" alt="" />
     </button>
+    <div class="popup">
+      <div class="img">
+        <img src="./images/popup.png" alt="" />
+      </div>
+      <div class="con">
+        <div class="day">
+          <input type="checkbox" id="ck" />
+          <label for="ck">오늘하루열지않기</label>
+        </div>
+        <button class="close">닫기</button>
+      </div>
+    </div>
   </body>
 </html>
