--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
             <svg
               width="24"
               height="24"
-              fill="none"
+              color="#ffffff"
+              fill="#none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
@@ -132,16 +133,17 @@
           </button>
           <button class="next">
             <svg
-              width="24"
-              height="24"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <use href="./lib/images/feather-sprite.svg#chevron-right" />
-            </svg>
+            width="24"
+            height="24"
+            color="#ffffff"
+            fill="#none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <use href="./lib/images/feather-sprite.svg#chevron-right" />
+          </svg>
           </button>
         </div>
         <div class="wheel">
