--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./lib/css/fonts.css" />
     <link rel="stylesheet" href="./lib/css/jquery.mb.YTPlayer.min.css" />
     <link rel="stylesheet" href="./lib/css/swiper-bundle.min.css" />
+    <link rel="icon" href="./images/favicon-16x16.png" />
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
